--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
-
+<!-- proba git javitas -->
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
   <div class="container">
     <header>
       
-    <h1>Hasznos linkek gyűjteménye</h1>
+    <h1>Hasznos linkek</h1>
 
     </header>
 
